# fast-api-college

./: .gitignore  alembic.ini  main.py  pyproject.toml
alembic/data/: students.json
alembic/versions/: 9ba330d95886_moving_is_active.py  d1e979396737_.py
api/: courses.py  users.py
api/utils/: courses.py  users.py
db/: db_setup.py
db/models/: course.py  user.py
pydantic_schemas/: course.py
